Fixed problem with Opera positionig caused by too large a negative left offset

--- a/src/core.css
+++ b/src/core.css
@@ -1,5 +1,5 @@
 .ui-tooltip-accessible{
-	left: -31512px;
+	left: -31000px;
 	display: block;
 	visibility: hidden;
 }
